<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ConsumptionActivity">

    <ImageView
        android:id="@+id/imgForm"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/logo_vehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConsumptionLabel"
        style="@style/TextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumption_title"
        app:layout_constraintStart_toStartOf="@+id/edtConsumption"
        app:layout_constraintTop_toBottomOf="@+id/imgForm" />

    <EditText
        android:id="@+id/edtConsumption"
        style="@style/EditText"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints="Weight"
        android:background="@drawable/textbox_rounded"
        android:drawableStart="@drawable/ic_local_gas_station"
        android:hint="@string/consumption_example"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConsumptionLabel" />

    <TextView
        android:id="@+id/tvStep"
        style="@style/TextViewLabelStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/consumption_step"
        app:layout_constraintStart_toStartOf="@+id/edtConsumption"
        app:layout_constraintTop_toBottomOf="@+id/edtConsumption" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        style="@style/Button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:text="@string/consumption_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>